# ClimateModeling

./: .gitignore  CMakeLists.txt  climate_modeling.hpp  ex03_plot.ipynb  ex03_solution.txt  exercise02.cpp  exercise03.cpp  function.cpp  output.cpp  plot.ipynb  solver.cpp
